<resources>
    <string name="app_name">Calculator_Phan_Van_Bang</string>

    <string name="khong">0</string>
    <string name="mot">1</string>
    <string name="hai">2</string>
    <string name="ba">3</string>
    <string name="bon">4</string>
    <string name="nam">5</string>
    <string name="sau">6</string>
    <string name="bay">7</string>
    <string name="tam">8</string>
    <string name="chin">9</string>

    <string name="AC">AC</string>
    <string name="C">C</string>
    <string name="nohope">+/-</string>
    <string name="phantram">%</string>
    <string name="chia">÷</string>
    <string name="nhan">×</string>
    <string name="tru">-</string>
    <string name="cong">+</string>
    <string name="bang">=</string>
    <string name="phay">.</string>

    <string name="manhinh">0</string>
</resources>